rezultat/1.err
/home/peni/so1/proiect/1.c: In function ‘main’:
/home/peni/so1/proiect/1.c:9:5: error: expected ‘,’ or ‘;’ before ‘prif’
    9 |     prif("Rezultatul este: %d\n", result);
      |     ^~~~
